---
source: src/config.rs
expression: file
info:
  - /mnt/cache/git/rusthead/tests/configs/example.config.toml
  - eric-beam-proxy.yml
input_file: tests/configs/example.config.toml
---
services:
  eric-beam-proxy:
    image: docker.verbis.dkfz.de/cache/samply/beam-proxy:develop
    environment:
      BROKER_URL: https://broker.bbmri.samply.de/
      PROXY_ID: dummy.broker.bbmri.samply.de
      APP_focus_KEY: "${ERIC_BEAM_PROXY_FOCUS_KEY}"
      ROOTCERT_FILE: /conf/root.crt.pem
      PRIVKEY_FILE: /run/secrets/proxy.pem
      TLS_CA_CERTIFICATES_DIR: /conf/trusted-ca-certs
      ALL_PROXY: http://forward-proxy:3128/
    volumes:
      - [TMP_DIR]/trusted-ca-certs:/conf/trusted-ca-certs:ro
    secrets:
      - proxy.pem
    configs:
      - source: eric.root.crt.pem
        target: /conf/root.crt.pem

configs:
  eric.root.crt.pem:
    content: |
      -----BEGIN CERTIFICATE-----
      MIIDNTCCAh2gAwIBAgIUMy/n0zFRihhVR3aAD54LumzeYdwwDQYJKoZIhvcNAQEL
      BQAwFjEUMBIGA1UEAxMLQnJva2VyLVJvb3QwHhcNMjIxMDI1MDczNTA4WhcNMzIx
      MDIyMDczNTM3WjAWMRQwEgYDVQQDEwtCcm9rZXItUm9vdDCCASIwDQYJKoZIhvcN
      AQEBBQADggEPADCCAQoCggEBAL3qWliHIlIT1Qlsyq/NKJ1uj6/AF0STNg5NTNpb
      Xqe5rmUqs6jmQepputGStBVe5TthFw56whISv9FqD5s1PZUGyFikW1pJUnF7ZYRf
      MfrJHRi1vUnD3Gw36FCot+i6BAxfw/rdp9hoqFZ6erRkULLaYZ5S2cDHN0DWc18V
      3VgZ66ah8QXSx7ERRNa/eWRkHrPIYhyVSoKuyZfvbVgsYZADSlviCgIHPrGLerLr
      ylNUyuTxJ5RKStOwPn7A+Jp7nRT+MRh9BphA7s6NuK9h+eVe1DiLbIETWyCEfN3Y
      INpunatn3QDhqOIfNcuBArjsAj7mg8l5KNba8nUP4v0EJYECAwEAAaN7MHkwDgYD
      VR0PAQH/BAQDAgEGMA8GA1UdEwEB/wQFMAMBAf8wHQYDVR0OBBYEFMvc5Fizz1vO
      MEG3MIsy7UY69ZNIMB8GA1UdIwQYMBaAFMvc5Fizz1vOMEG3MIsy7UY69ZNIMBYG
      A1UdEQQPMA2CC0Jyb2tlci1Sb290MA0GCSqGSIb3DQEBCwUAA4IBAQBb8a5su820
      h8JStJC+KpvXmDrGkwx9bHlEZMgQQejIrwPLEbA32KBvNxdoUxF9q1Y773MKdqbc
      cCJwzQXE/NPZ13hCGrEIXs8DgH52GhEB5592k5/bRNcAvUwbZSXPPiT0rgq/eUOt
      BYhgN0ov7h1MC5L6CYB/rQwqck7JPlmrXTkh2gix4/dEdBRzsHsn/xlo8ay5QYHG
      rx2Adit76eZu/MJoJNzl1r8MPxLqyAie3KcIU54A+UMozLrWEQP/TyOyWZdjUjJt
      cBYgkKJTjwdRhc+ehI3kFo7b/a/Z/jl9szKsAPHozMixSi8lGnsYwN80oqeRvT7h
      wcMUK+igv3/K
      -----END CERTIFICATE-----

secrets:
  proxy.pem:
    file: [TMP_DIR]/pki/dummy.priv.pem
